--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
     "upload-images-supabase": "node scripts/upload-images-supabase.js"
   },
   "dependencies": {
+    "@google/genai": "^1.38.0",
     "@supabase/supabase-js": "^2.90.1",
     "firebase": "^12.8.0",
+    "google-auth-library": "^10.5.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-dropzone": "^14.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@vercel/node": "^5.5.28",
     "@vitejs/plugin-react": "^5.1.1",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.1",
